added getters and setters for pizza name and size

--- a/test-output/old/Order Intent Pizza Test/methods-alphabetical.html
+++ b/test-output/old/Order Intent Pizza Test/methods-alphabetical.html
@@ -1,40 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Order Intent Pizza Test</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:12:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">AccountPageTest</td> 
-  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:12:54</td>   <td>118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">AccountPageTest</td> 
-  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>10213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">AccountPageTest</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">AccountPageClickToOrderPizzaTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:24</td>   <td>912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">AccountPageClickToOrderPizzaTest</td> 
   <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>10282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
-  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>10348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
-  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:17</td>   <td>23813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:37</td>   <td>13649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">AccountPageClickToOrderPizzaTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:13</td>   <td>-10387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:13</td>   <td>-10374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
   <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:58</td>   <td>4107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:59</td>   <td>5638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:07</td>   <td>13125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>14200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:20</td>   <td>-3183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:33</td>   <td>9781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">NewPizzaOrderTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:35</td>   <td>11239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">NewPizzaOrderTest</td> 
+  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:51</td>   <td>27625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">NewPizzaOrderTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:16</td>   <td>-7035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:19</td>   <td>-4412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>14660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:20</td>   <td>26427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:25</td>   <td>1633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:27</td>   <td>3532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:30</td>   <td>6735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>-4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:38</td>   <td>14484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:41</td>   <td>18075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:45</td>   <td>22019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>-4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>-4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:00</td>   <td>6622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:00</td>   <td>6678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>14698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:56</td>   <td>32364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:09</td>   <td>-14697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:09</td>   <td>-14697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:09</td>   <td>-14697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:19</td>   <td>-4060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:20</td>   <td>-3279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:26</td>   <td>2287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:29</td>   <td>6076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:31</td>   <td>7773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:42</td>   <td>18589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
 </table>
