--- a/test-output/old/Order Intent Pizza Test/methods.html
+++ b/test-output/old/Order Intent Pizza Test/methods.html
@@ -1,40 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Order Intent Pizza Test</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:12:53</td>   <td>4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">AccountPageTest</td> 
-  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:12:54</td>   <td>4136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">AccountPageTest</td> 
-  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:58</td>   <td>8125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:12:59</td>   <td>9656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:00</td>   <td>10640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:00</td>   <td>10696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>14231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">AccountPageTest</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:13</td>   <td>4310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:13</td>   <td>4323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
   <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>14300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
-  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>14366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
-  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:07</td>   <td>17143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>18218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:16</td>   <td>7662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:19</td>   <td>10285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>18678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>18716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:19</td>   <td>10637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:20</td>   <td>11418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 12:13:17</td>   <td>27831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:20</td>   <td>11514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:23</td>   <td>14697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">AccountPageClickToOrderPizzaTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:24</td>   <td>15609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">AccountPageClickToOrderPizzaTest</td> 
   <td>TestNG@1742296210</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 12:13:20</td>   <td>30445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:25</td>   <td>16330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:26</td>   <td>16984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:27</td>   <td>18229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:29</td>   <td>20773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:30</td>   <td>21432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:31</td>   <td>22470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:33</td>   <td>24478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">NewPizzaOrderTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:35</td>   <td>25936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">NewPizzaOrderTest</td> 
+  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:37</td>   <td>28346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">AccountPageClickToOrderPizzaTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:38</td>   <td>29181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:41</td>   <td>32772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:42</td>   <td>33286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:45</td>   <td>36716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:52:51</td>   <td>42322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">NewPizzaOrderTest</td> 
+  <td>TestNG@1832874625</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:52:56</td>   <td>47061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1832874625</td>   <td></td> </tr>
 </table>
