--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">9 methods,   9 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,22 +101,17 @@
                     <div class="method-list-content passed suite-Order_Intent_Pizza_Test">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageTest">AccountPageTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageClickToOrderPizzaTest">AccountPageClickToOrderPizzaTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageTest">AccountPageTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageClickToOrderPizzaTest">AccountPageClickToOrderPizzaTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageTest">AccountPageTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageClickToOrderPizzaTest">AccountPageClickToOrderPizzaTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -127,6 +122,26 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="NewPizzaOrderTest">NewPizzaOrderTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="NewPizzaOrderTest">NewPizzaOrderTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="NewPizzaOrderTest">NewPizzaOrderTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Order_Intent_Pizza_Test -->
@@ -149,30 +164,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AccountPageTest">
-                  </a> <!-- AccountPageTest -->
-                  <span class="method-name">AccountPageTest</span>
+                  <a name="AccountPageClickToOrderPizzaTest">
+                  </a> <!-- AccountPageClickToOrderPizzaTest -->
+                  <span class="method-name">AccountPageClickToOrderPizzaTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="AccountPageTest">
-                  </a> <!-- AccountPageTest -->
-                  <span class="method-name">AccountPageTest</span>
+                  <a name="AccountPageClickToOrderPizzaTest">
+                  </a> <!-- AccountPageClickToOrderPizzaTest -->
+                  <span class="method-name">AccountPageClickToOrderPizzaTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="AccountPageTest">
-                  </a> <!-- AccountPageTest -->
-                  <span class="method-name">AccountPageTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LoginTest">
-                  </a> <!-- LoginTest -->
-                  <span class="method-name">LoginTest</span>
+                  <a name="AccountPageClickToOrderPizzaTest">
+                  </a> <!-- AccountPageClickToOrderPizzaTest -->
+                  <span class="method-name">AccountPageClickToOrderPizzaTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -187,6 +195,34 @@
                   <a name="LoginTest">
                   </a> <!-- LoginTest -->
                   <span class="method-name">LoginTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginTest">
+                  </a> <!-- LoginTest -->
+                  <span class="method-name">LoginTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NewPizzaOrderTest">
+                  </a> <!-- NewPizzaOrderTest -->
+                  <span class="method-name">NewPizzaOrderTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NewPizzaOrderTest">
+                  </a> <!-- NewPizzaOrderTest -->
+                  <span class="method-name">NewPizzaOrderTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NewPizzaOrderTest">
+                  </a> <!-- NewPizzaOrderTest -->
+                  <span class="method-name">NewPizzaOrderTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -262,36 +298,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(9);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AccountPageTest')
+data.setCell(0, 1, 'NewPizzaOrderTest')
 data.setCell(0, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(0, 3, 5518);
+data.setCell(0, 3, 10777);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LoginTest')
 data.setCell(1, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(1, 3, 4310);
+data.setCell(1, 3, 5960);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'AccountPageTest')
+data.setCell(2, 1, 'AccountPageClickToOrderPizzaTest')
 data.setCell(2, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(2, 3, 4105);
+data.setCell(2, 3, 5821);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'AccountPageTest')
+data.setCell(3, 1, 'LoginTest')
 data.setCell(3, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(3, 3, 3985);
+data.setCell(3, 3, 4815);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'LoginTest')
+data.setCell(4, 1, 'NewPizzaOrderTest')
 data.setCell(4, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(4, 3, 2841);
+data.setCell(4, 3, 4738);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'LoginTest')
+data.setCell(5, 1, 'NewPizzaOrderTest')
 data.setCell(5, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(5, 3, 2613);
+data.setCell(5, 3, 4702);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'AccountPageClickToOrderPizzaTest')
+data.setCell(6, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
+data.setCell(6, 3, 4425);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'AccountPageClickToOrderPizzaTest')
+data.setCell(7, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
+data.setCell(7, 3, 3531);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'LoginTest')
+data.setCell(8, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
+data.setCell(8, 3, 3350);
 window.suiteTableData['Order_Intent_Pizza_Test']= { tableData: data, tableDiv: 'times-div-Order_Intent_Pizza_Test'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Order_Intent_Pizza_Test">
               </div> <!-- times-div-Order_Intent_Pizza_Test -->
             </div> <!-- times-div -->
@@ -331,64 +379,100 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">AccountPageTest</span>
-                <span class="method-start">4026 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">4316 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">AccountPageTest</span>
-                <span class="method-start">4144 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">4329 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">8132 ms</span>
+                <span class="method-start">7667 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">9663 ms</span>
+                <span class="method-start">10290 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser(Chrome)</span>
-                <span class="method-start">10647 ms</span>
+                <span class="method-start">10642 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser(IE)</span>
-                <span class="method-start">10703 ms</span>
+                <span class="method-start">11423 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">AccountPageTest</span>
-                <span class="method-start">14239 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">11520 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">14308 ms</span>
+                <span class="method-name">AccountPageClickToOrderPizzaTest</span>
+                <span class="method-start">14703 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">14374 ms</span>
+                <span class="method-name">AccountPageClickToOrderPizzaTest</span>
+                <span class="method-start">15615 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">17150 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">18225 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">18685 ms</span>
+                <span class="method-start">16336 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser(FF)</span>
-                <span class="method-start">18724 ms</span>
+                <span class="method-start">16990 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">18235 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser(Chrome)</span>
+                <span class="method-start">20777 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">21437 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser(IE)</span>
+                <span class="method-start">22474 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">27839 ms</span>
+                <span class="method-name">NewPizzaOrderTest</span>
+                <span class="method-start">24484 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NewPizzaOrderTest</span>
+                <span class="method-start">25942 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">AccountPageClickToOrderPizzaTest</span>
+                <span class="method-start">28352 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">30453 ms</span>
+                <span class="method-start">29187 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">32777 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser(FF)</span>
+                <span class="method-start">33291 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">36721 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">NewPizzaOrderTest</span>
+                <span class="method-start">42328 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">47067 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
