--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c7e6b">  <td>15/02/18 23:50:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@2ec791b9]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@169937755</td>   <td></td> </tr>
-<tr bgcolor="d285a7">  <td>15/02/18 23:50:03</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.runtest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@2ec791b9]">runtest</td> 
-  <td>main@169937755</td>   <td></td> </tr>
+<tr bgcolor="dd9872">  <td>15/02/19 12:50:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@2e958bb8]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2004273875</td>   <td></td> </tr>
+<tr bgcolor="a68c91">  <td>15/02/19 12:50:09</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@2e958bb8]">LoginTest</td> 
+  <td>main@2004273875</td>   <td></td> </tr>
+<tr bgcolor="a68c91">  <td>15/02/19 12:50:09</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageClickToOrderPizzaTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@2e958bb8]">AccountPageClickToOrderPizzaTest</td> 
+  <td>main@2004273875</td>   <td></td> </tr>
+<tr bgcolor="a68c91">  <td>15/02/19 12:50:09</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.NewPizzaOrderTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@2e958bb8]">NewPizzaOrderTest</td> 
+  <td>main@2004273875</td>   <td></td> </tr>
 </table>
