finished confirmation page

--- a/test-output/old/Order Intent Pizza Test/classes.html
+++ b/test-output/old/Order Intent Pizza Test/classes.html
@@ -15,7 +15,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>OrderConfirmPizzaTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>NewPizzaOrderTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>OrderSummaryPizzaTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
